# AutomatedAssesment_LLMs

./: ConsolidatedResults.xlsx  agents.py  example for env file.txt  master.py  pyproject.toml  readme.txt  tasks.py
setup/: DeepSeek-r1Modelfile  DolphinModelfile  Llama3.18bModelfile  create-deepSeekr1-model-file.sh  create-dolphin-llama3-model-file.sh  create-llama3-model-file.sh  create-llama3.18b-model-file.sh
